--- a/app/css/main.css
+++ b/app/css/main.css
@@ -836,10 +836,7 @@ a {
   .choice-of-customers-gallery {
     position: absolute;
     top: 80px;
-    left: 50%;
-    -webkit-transform: translate(-50%, 0);
-        -ms-transform: translate(-50%, 0);
-            transform: translate(-50%, 0);
+    left: 40px;
     width: 100%;
     width: -webkit-calc(100% - 80px);
     width: calc(100% - 80px); }
@@ -847,7 +844,11 @@ a {
       .choice-of-customers-gallery {
         top: 55px;
         width: -webkit-calc(100% - 175px);
-        width: calc(100% - 175px); } }
+        width: calc(100% - 175px);
+        left: 50%;
+        -webkit-transform: translate(-50%, 0);
+            -ms-transform: translate(-50%, 0);
+                transform: translate(-50%, 0); } }
     @media screen and (max-width: 425px) {
       .choice-of-customers-gallery {
         top: 55px;
@@ -1402,7 +1403,7 @@ a {
       -webkit-transform: translate(-50%, 0);
           -ms-transform: translate(-50%, 0);
               transform: translate(-50%, 0);
-      z-index: 20;
+      z-index: 10;
       cursor: pointer; }
       @media screen and (max-width: 480px) {
         .text-section-main__arrow {
@@ -1423,6 +1424,9 @@ a {
     -webkit-justify-content: space-between;
         -ms-flex-pack: justify;
             justify-content: space-between; }
+    @media screen and (max-width: 480px) {
+      .footer-top-wrapper {
+        display: none; } }
   .footer-top-item {
     display: -webkit-box;
     display: -webkit-flex;
@@ -1458,6 +1462,12 @@ a {
             -ms-flex-align: center;
                 align-items: center;
         margin-bottom: 10px; }
+        @media screen and (max-width: 480px) {
+          .footer-top-item-list__item {
+            -webkit-box-pack: center;
+            -webkit-justify-content: center;
+                -ms-flex-pack: center;
+                    justify-content: center; } }
         .footer-top-item-list__item_mb {
           margin-bottom: 20px; }
         .footer-top-item-list__item a {
@@ -1471,10 +1481,110 @@ a {
           -webkit-align-items: center;
               -ms-flex-align: center;
                   align-items: center; }
+          @media screen and (max-width: 480px) {
+            .footer-top-item-list__item a {
+              -webkit-box-pack: center;
+              -webkit-justify-content: center;
+                  -ms-flex-pack: center;
+                      justify-content: center; }
+              .footer-top-item-list__item a:last-child {
+                margin-right: 0px; } }
           .footer-top-item-list__item a svg {
             margin-right: 10px; }
         .footer-top-item-list__item svg {
           margin-right: 10px; }
+  .footer-top-mob {
+    display: none;
+    -webkit-box-orient: vertical;
+    -webkit-box-direction: normal;
+    -webkit-flex-direction: column;
+        -ms-flex-direction: column;
+            flex-direction: column;
+    -webkit-box-align: stretch;
+    -webkit-align-items: stretch;
+        -ms-flex-align: stretch;
+            align-items: stretch;
+    text-align: center;
+    background: #F9F9F9;
+    border-top: 1px solid #DEDEDE;
+    border-bottom: 1px solid #DEDEDE;
+    padding: 30px 0 10px;
+    font-family: 'Proxima Nova Light', sans-serif; }
+    @media screen and (max-width: 480px) {
+      .footer-top-mob {
+        display: -webkit-box;
+        display: -webkit-flex;
+        display: -ms-flexbox;
+        display: flex; } }
+    .footer-top-mob-row {
+      margin-bottom: 10px;
+      font-size: 14px; }
+      .footer-top-mob-row .footer-top-item__head {
+        font-size: 14px; }
+      .footer-top-mob-row a {
+        color: #000; }
+      .footer-top-mob-row_cursive {
+        font-style: italic;
+        font-size: 18px;
+        margin-bottom: 25px; }
+      .footer-top-mob-row_socials {
+        margin-bottom: 35px; }
+        .footer-top-mob-row_socials a {
+          margin-right: 10px; }
+          .footer-top-mob-row_socials a:last-child {
+            margin-right: 0px; }
+          .footer-top-mob-row_socials a svg {
+            width: 35px;
+            height: 35px; }
+      .footer-top-mob-row_payment a {
+        margin-right: 15px; }
+        .footer-top-mob-row_payment a:last-child {
+          margin-right: 0px; }
+        .footer-top-mob-row_payment a svg {
+          width: 35px;
+          height: 35px; }
+      .footer-top-mob-row_ff {
+        font-family: 'Proxima Nova Semibold', sans-serif; }
+      .footer-top-mob-row_horiz {
+        display: -webkit-box;
+        display: -webkit-flex;
+        display: -ms-flexbox;
+        display: flex;
+        -webkit-box-orient: horizontal;
+        -webkit-box-direction: normal;
+        -webkit-flex-direction: row;
+            -ms-flex-direction: row;
+                flex-direction: row;
+        -webkit-box-pack: center;
+        -webkit-justify-content: center;
+            -ms-flex-pack: center;
+                justify-content: center; }
+        .footer-top-mob-row_horiz .footer-top-mob-row-item {
+          -webkit-box-flex: 50%;
+          -webkit-flex: 50%;
+              -ms-flex: 50%;
+                  flex: 50%;
+          white-space: nowrap; }
+      .footer-top-mob-row-item {
+        display: -webkit-box;
+        display: -webkit-flex;
+        display: -ms-flexbox;
+        display: flex;
+        -webkit-box-align: center;
+        -webkit-align-items: center;
+            -ms-flex-align: center;
+                align-items: center;
+        -webkit-box-flex: 50%;
+        -webkit-flex: 50%;
+            -ms-flex: 50%;
+                flex: 50%;
+        -webkit-box-pack: center;
+        -webkit-justify-content: center;
+            -ms-flex-pack: center;
+                justify-content: center; }
+        .footer-top-mob-row-item .footer-top-item-list__item svg {
+          width: 12px;
+          height: 12px; }
 
 .footer-bottom {
   background: #FFF; }
@@ -1492,12 +1602,41 @@ a {
     -webkit-justify-content: space-between;
         -ms-flex-pack: justify;
             justify-content: space-between; }
+    @media screen and (max-width: 480px) {
+      .footer-bottom-wrapper {
+        -webkit-box-orient: vertical;
+        -webkit-box-direction: normal;
+        -webkit-flex-direction: column;
+            -ms-flex-direction: column;
+                flex-direction: column;
+        height: auto;
+        padding: 10px 0; } }
   .footer-bottom-item {
     color: #737373; }
     .footer-bottom-item a {
       color: #737373; }
     .footer-bottom-item_ra {
       color: #000; }
+    @media screen and (max-width: 480px) {
+      .footer-bottom-item {
+        font-size: 14px; }
+        .footer-bottom-item:nth-child(1) {
+          -webkit-box-ordinal-group: 0;
+          -webkit-order: -1;
+              -ms-flex-order: -1;
+                  order: -1;
+          margin-bottom: 10px; }
+        .footer-bottom-item:nth-child(4) {
+          -webkit-box-ordinal-group: 2;
+          -webkit-order: 1;
+              -ms-flex-order: 1;
+                  order: 1; }
+        .footer-bottom-item:nth-child(5) {
+          -webkit-box-ordinal-group: 1;
+          -webkit-order: 0;
+              -ms-flex-order: 0;
+                  order: 0;
+          margin-bottom: 10px; } }
 
 .block_footer-bottom {
   padding: 0 40px; }
