--- a/app/css/main.css
+++ b/app/css/main.css
@@ -1134,7 +1134,10 @@ a {
         -ms-flex-align: start;
             align-items: flex-start;
     overflow: hidden;
-    padding: 27px 20px; }
+    padding: 27px 20px;
+    margin-right: 20px; }
+    .needs-list-item:last-child {
+      margin-right: 0px; }
     @media screen and (max-width: 1366px) {
       .needs-list-item {
         width: 300px; } }
@@ -2653,12 +2656,12 @@ a {
       -webkit-border-radius: 5px;
               border-radius: 5px;
       position: relative; }
-    .filter-checkbox input[type="radio"] {
+    .filter-checkbox input[type="radio"], .filter-checkbox input[type="checkbox"] {
       display: none; }
-    .filter-checkbox input[type="radio"]:checked ~ .filter-checkbox-square {
+    .filter-checkbox input[type="radio"]:checked, .filter-checkbox input[type="checkbox"]:checked ~ .filter-checkbox-square {
       background: #D71921;
       border: 2px solid #D71921; }
-      .filter-checkbox input[type="radio"]:checked ~ .filter-checkbox-square:after {
+      .filter-checkbox input[type="radio"]:checked:after, .filter-checkbox input[type="checkbox"]:checked ~ .filter-checkbox-square:after {
         content: '';
         position: absolute;
         top: 40%;
@@ -4249,3 +4252,272 @@ a {
             -ms-flex-pack: center;
                 justify-content: center;
         padding: 0px; }
+
+.fabrics-banner {
+  position: relative; }
+  .fabrics-banner img {
+    width: 100%; }
+  .fabrics-banner__text {
+    position: absolute;
+    bottom: 60px;
+    left: 50%;
+    -webkit-transform: translateX(-50%);
+    -ms-transform: translateX(-50%);
+    transform: translateX(-50%);
+    color: #000;
+    font-size: 48px;
+    font-family: 'Proxima Nova Extrabold'; }
+
+.fabrics-filter {
+  padding: 25px 155px 30px;
+  border-top: 1px solid #E3E8F0;
+  border-bottom: 1px solid #E3E8F0; }
+  .fabrics-filter-letter {
+    font-size: 14px;
+    color: #656565;
+    font-family: 'Proxima Nova Light'; }
+  .fabrics-filter-column {
+    -webkit-box-flex: 1;
+    -webkit-flex: 1;
+        -ms-flex: 1;
+            flex: 1;
+    display: -webkit-box;
+    display: -webkit-flex;
+    display: -ms-flexbox;
+    display: flex;
+    -webkit-box-orient: vertical;
+    -webkit-box-direction: normal;
+    -webkit-flex-direction: column;
+        -ms-flex-direction: column;
+            flex-direction: column;
+    margin-right: 60px; }
+    .fabrics-filter-column-wrapper {
+      display: -webkit-box;
+      display: -webkit-flex;
+      display: -ms-flexbox;
+      display: flex;
+      -webkit-box-align: start;
+      -webkit-align-items: flex-start;
+          -ms-flex-align: start;
+              align-items: flex-start;
+      -webkit-box-pack: justify;
+      -webkit-justify-content: space-between;
+          -ms-flex-pack: justify;
+              justify-content: space-between; }
+    .fabrics-filter-column:last-child {
+      margin-right: 0px; }
+    .fabrics-filter-column-row {
+      display: -webkit-box;
+      display: -webkit-flex;
+      display: -ms-flexbox;
+      display: flex;
+      -webkit-box-align: start;
+      -webkit-align-items: flex-start;
+          -ms-flex-align: start;
+              align-items: flex-start;
+      margin-bottom: 20px; }
+      .fabrics-filter-column-row_align-top {
+        -webkit-box-align: center;
+        -webkit-align-items: center;
+            -ms-flex-align: center;
+                align-items: center; }
+      .fabrics-filter-column-row-name {
+        font-family: 'Proxima Nova Semibold', sans-serif;
+        line-height: normal;
+        font-size: 18px;
+        color: #242424;
+        margin-right: 20px;
+        white-space: nowrap; }
+      .fabrics-filter-column-row-value {
+        -webkit-box-flex: 1;
+        -webkit-flex: 1;
+            -ms-flex: 1;
+                flex: 1; }
+        .fabrics-filter-column-row-value .SumoSelect {
+          width: 270px; }
+        .fabrics-filter-column-row-value .SumoSelect > .CaptionCont > label > i {
+          background-image: none;
+          border-bottom: 1px solid #000;
+          border-left: 1px solid #000;
+          -webkit-transform: rotate(-45deg);
+              -ms-transform: rotate(-45deg);
+                  transform: rotate(-45deg);
+          width: 5px;
+          height: 5px; }
+        .fabrics-filter-column-row-value .SumoSelect > .CaptionCont > label {
+          padding: 0 20px;
+          border-left: 2px solid #E4E7EF; }
+        .fabrics-filter-column-row-value .SumoSelect > .optWrapper > .options {
+          max-height: unset;
+          font-size: 14px; }
+        .fabrics-filter-column-row-value .CaptionCont.SelectBox {
+          width: 270px;
+          color: #000;
+          font-size: 14px;
+          height: 42px;
+          -webkit-border-radius: 4px;
+                  border-radius: 4px;
+          border: 2px solid #E4E7EF;
+          display: -webkit-box;
+          display: -webkit-flex;
+          display: -ms-flexbox;
+          display: flex;
+          -webkit-box-align: center;
+          -webkit-align-items: center;
+              -ms-flex-align: center;
+                  align-items: center;
+          cursor: pointer;
+          outline: none; }
+          .fabrics-filter-column-row-value .CaptionCont.SelectBox span {
+            cursor: pointer; }
+          .fabrics-filter-column-row-value .CaptionCont.SelectBox label {
+            cursor: pointer; }
+        .fabrics-filter-column-row-value .SumoSelect > .optWrapper.multiple > .options li.opt.selected span i {
+          background: url(../img/icons/sumoselect-active.svg) no-repeat center center;
+          -webkit-background-size: 111% 111%;
+                  background-size: 111%; }
+        .fabrics-filter-column-row-value .SumoSelect.open > .optWrapper {
+          top: 110%;
+          border: 2px solid #E4E7EF; }
+        .fabrics-filter-column-row-value-item_row {
+          display: -webkit-box;
+          display: -webkit-flex;
+          display: -ms-flexbox;
+          display: flex;
+          -webkit-box-align: center;
+          -webkit-align-items: center;
+              -ms-flex-align: center;
+                  align-items: center;
+          -webkit-box-pack: start;
+          -webkit-justify-content: flex-start;
+              -ms-flex-pack: start;
+                  justify-content: flex-start; }
+          .fabrics-filter-column-row-value-item_row .filter-checkbox {
+            margin-right: 20px;
+            font-size: 14px;
+            margin-bottom: 0px; }
+        .fabrics-filter-column-row-value-row {
+          display: -webkit-box;
+          display: -webkit-flex;
+          display: -ms-flexbox;
+          display: flex;
+          -webkit-box-pack: justify;
+          -webkit-justify-content: space-between;
+              -ms-flex-pack: justify;
+                  justify-content: space-between;
+          margin-bottom: 15px; }
+          .fabrics-filter-column-row-value-row_mb {
+            margin-bottom: 0px; }
+          .fabrics-filter-column-row-value-row .card-item-row-colors_horiz {
+            -webkit-flex-wrap: wrap;
+                -ms-flex-wrap: wrap;
+                    flex-wrap: wrap;
+            max-width: 273px;
+            -webkit-box-align: start;
+            -webkit-align-items: flex-start;
+                -ms-flex-align: start;
+                    align-items: flex-start; }
+          .fabrics-filter-column-row-value-row .card-item-row-colors__color {
+            margin-right: 20px; }
+            .fabrics-filter-column-row-value-row .card-item-row-colors__color:nth-child(1) {
+              margin-bottom: 20px; }
+          .fabrics-filter-column-row-value-row-item {
+            display: -webkit-box;
+            display: -webkit-flex;
+            display: -ms-flexbox;
+            display: flex;
+            -webkit-box-align: center;
+            -webkit-align-items: center;
+                -ms-flex-align: center;
+                    align-items: center;
+            white-space: nowrap;
+            margin-right: 10px;
+            color: #656565;
+            font-size: 14px;
+            cursor: pointer; }
+            .fabrics-filter-column-row-value-row-item:last-child {
+              margin-right: 0px; }
+            .fabrics-filter-column-row-value-row-item .card-main-block-description-row-item-tooltip {
+              white-space: normal;
+              width: 15px;
+              height: 15px; }
+  .fabrics-filter-btn-wrapper {
+    -webkit-box-pack: center;
+    -webkit-justify-content: center;
+        -ms-flex-pack: center;
+            justify-content: center; }
+    .fabrics-filter-btn-wrapper .filter-btn {
+      margin-right: 20px; }
+      .fabrics-filter-btn-wrapper .filter-btn:last-child {
+        margin-right: 0px; }
+
+.text-underline {
+  text-decoration: underline; }
+
+.fabrics-result {
+  display: -webkit-box;
+  display: -webkit-flex;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-flex-wrap: wrap;
+      -ms-flex-wrap: wrap;
+          flex-wrap: wrap;
+  -webkit-box-pack: justify;
+  -webkit-justify-content: space-between;
+      -ms-flex-pack: justify;
+          justify-content: space-between;
+  padding: 40px 40px 0px; }
+  .fabrics-result-item {
+    -webkit-box-flex: 0;
+    -webkit-flex: 0 1 324px;
+        -ms-flex: 0 1 324px;
+            flex: 0 1 324px;
+    display: -webkit-box;
+    display: -webkit-flex;
+    display: -ms-flexbox;
+    display: flex;
+    -webkit-box-orient: vertical;
+    -webkit-box-direction: normal;
+    -webkit-flex-direction: column;
+        -ms-flex-direction: column;
+            flex-direction: column;
+    -webkit-box-align: stretch;
+    -webkit-align-items: stretch;
+        -ms-flex-align: stretch;
+            align-items: stretch;
+    margin-bottom: 30px; }
+    @media screen and (max-width: 1366px) {
+      .fabrics-result-item {
+        -webkit-box-flex: 0;
+        -webkit-flex: 0 1 310px;
+            -ms-flex: 0 1 310px;
+                flex: 0 1 310px; } }
+    .fabrics-result-item-img img {
+      width: 100%; }
+    .fabrics-result-item-row {
+      display: -webkit-box;
+      display: -webkit-flex;
+      display: -ms-flexbox;
+      display: flex;
+      -webkit-box-align: center;
+      -webkit-align-items: center;
+          -ms-flex-align: center;
+              align-items: center;
+      -webkit-box-pack: justify;
+      -webkit-justify-content: space-between;
+          -ms-flex-pack: justify;
+              justify-content: space-between;
+      margin-bottom: 15px; }
+      .fabrics-result-item-row:last-child {
+        margin-bottom: 0px; }
+      .fabrics-result-item-row-name {
+        font-size: 18px;
+        font-family: 'Proxima Nova', sans-serif; }
+      .fabrics-result-item-row-category {
+        font-size: 14px;
+        color: #3A3A3A; }
+      .fabrics-result-item-row-type {
+        font-family: 'Proxima Nova', sans-serif;
+        color: #3A3A3A; }
+  .fabrics-result-btn-wrapper {
+    padding: 0px 0px 50px; }
