--- a/app/scss/main.scss
+++ b/app/scss/main.scss
@@ -899,6 +899,10 @@ a {
 			align-items: flex-start;
 			overflow: hidden;
 			padding: 27px 20px;
+			margin-right: 20px;
+			&:last-child {
+				margin-right: 0px;
+			}
 			@include w1366 {
 				width: 300px;
 			}
@@ -2091,10 +2095,10 @@ a {
 			border-radius: 5px;
 			position: relative;
 		}
-		input[type="radio"] {
+		input[type="radio"], input[type="checkbox"] {
 			display: none;
 		}
-		input[type="radio"]:checked ~ .filter-checkbox-square {
+		input[type="radio"]:checked, input[type="checkbox"]:checked ~ .filter-checkbox-square {
 			background: $red;
 			border: 2px solid $red;
 			&:after {
@@ -3377,12 +3381,224 @@ a {
 	}
 }
 
+.fabrics-banner {
+	position: relative;
+	img {
+		width: 100%;
+	}
+	&__text {
+	    position: absolute;
+	    bottom: 60px;
+	    left: 50%;
+	    -webkit-transform: translateX(-50%);
+	    -ms-transform: translateX(-50%);
+	    transform: translateX(-50%);
+	    color: #000;
+	    font-size: 48px;
+		font-family: 'Proxima Nova Extrabold';
+	}
+}
+
+.fabrics-filter {
+	padding: 25px 155px 30px;
+	border-top: 1px solid #E3E8F0;
+	border-bottom: 1px solid #E3E8F0;
+	&-letter {
+		font-size: 14px;
+		color: #656565;
+		font-family: 'Proxima Nova Light';
+	}
+	&-column {
+		&-wrapper {
+			display: flex;
+			align-items: flex-start;
+			justify-content: space-between;
+		}
+		flex: 1;
+		display: flex;
+		flex-direction: column;
+		margin-right: 60px;
+		&:last-child {
+			margin-right: 0px;
+		}
+		&-row {
+			display: flex;
+			align-items: flex-start;
+			margin-bottom: 20px;
+			&_align-top {
+				align-items: center;
+			}
+			&-name {
+				font-family: 'Proxima Nova Semibold', sans-serif;
+				line-height: normal;
+				font-size: 18px;
+				color: #242424;
+				margin-right: 20px;
+				white-space: nowrap;
+			}
+			&-value {
+				flex: 1;
+				.SumoSelect {
+					width: 270px;
+				}
+				.SumoSelect>.CaptionCont>label>i {
+					background-image: none;
+					border-bottom: 1px solid #000;
+					border-left: 1px solid #000;
+					transform: rotate(-45deg);
+					width: 5px;
+					height: 5px;
+				}
+				.SumoSelect>.CaptionCont>label {
+					padding: 0 20px;
+					border-left: 2px solid #E4E7EF;
+				}
+				.SumoSelect>.optWrapper>.options {
+					max-height: unset;
+					font-size: 14px;
+				}
+				.SumoSelect.open>.optWrapper {
+
+				}
+				.CaptionCont.SelectBox {
+					width: 270px;
+					color: #000;
+					font-size: 14px;
+					height: 42px;
+					border-radius: 4px;
+					border: 2px solid #E4E7EF;
+					display: flex;
+					align-items: center;
+					cursor: pointer;
+					outline: none;
+					span {
+						cursor: pointer;
+					}
+					label {
+						cursor: pointer;
+					}
+				}
+				.SumoSelect>.optWrapper.multiple>.options li.opt.selected span i {
+					background: url(../img/icons/sumoselect-active.svg) no-repeat center center;
+					background-size: 111%;
+				}
+				.SumoSelect.open>.optWrapper {
+					top: 110%;
+					border: 2px solid #E4E7EF;
+				}
+				&-item {
+					&_row {
+						display: flex;
+						align-items: center;
+						justify-content: flex-start;
+						.filter-checkbox {
+							margin-right: 20px;
+							font-size: 14px;
+							margin-bottom: 0px;
+						}
+					}
+				}
+				&-row {
+					display: flex;
+					justify-content: space-between;
+					margin-bottom: 15px;
+					&_mb {
+						margin-bottom: 0px;
+					}
+					.card-item-row-colors_horiz {
+						flex-wrap: wrap;
+						max-width: 273px;
+						align-items: flex-start;
+					}
+					.card-item-row-colors__color {
+						margin-right: 20px;
+						&:nth-child(1) {
+							margin-bottom: 20px;
+						}
+					}
+					&-item {
+						display: flex;
+						align-items: center;
+						white-space: nowrap;
+						margin-right: 10px;
+						color: #656565;
+						font-size: 14px;
+						cursor: pointer;
+						&:last-child {
+							margin-right: 0px;
+						}
+						.card-main-block-description-row-item-tooltip {
+							white-space: normal;
+							width: 15px;
+    						height: 15px;
+						}
+					}
+				}
+			}
+		}
+	}
+	&-btn-wrapper {
+		justify-content: center;
+		.filter-btn {
+			margin-right: 20px;
+			&:last-child {
+				margin-right: 0px;
+			}
+		}
+	}
+}
 
 
+.text-underline {
+	text-decoration: underline;
+}
 
 
-
-
+.fabrics-result {
+	display: flex;
+	flex-wrap: wrap;
+	justify-content: space-between;
+	padding: 40px 40px 0px;
+	&-item {
+		flex: 0 1 324px;
+		display: flex;
+		flex-direction: column;
+		align-items: stretch;
+		margin-bottom: 30px;
+		@include w1366 {
+			flex: 0 1 310px;
+		}
+		&-img {
+			img {
+				width: 100%;
+			}
+		}
+		&-row {
+			display: flex;
+			align-items: center;
+			justify-content: space-between;
+			margin-bottom: 15px;
+			&:last-child {
+				margin-bottom: 0px;
+			}
+			&-name {
+				font-size: 18px;
+				font-family: 'Proxima Nova', sans-serif;
+			}
+			&-category {
+				font-size: 14px;
+				color: #3A3A3A;
+			}
+			&-type {
+				font-family: 'Proxima Nova', sans-serif;
+				color: #3A3A3A;
+			}
+		}
+	}
+	&-btn-wrapper {
+		padding: 0px 0px 50px;
+	}
+}
 
 
 
