--- a/app/css/main.css
+++ b/app/css/main.css
@@ -672,6 +672,8 @@ a {
       font-family: 'Proxima Nova Semiblod', sans-serif;
       font-size: 24px;
       letter-spacing: 1px; }
+    .block-head_text-left {
+      text-align: left; }
   .block_padding {
     padding: 40px 40px 30px 40px; }
     .block_padding-ext {
@@ -4467,6 +4469,8 @@ a {
       -ms-flex-pack: justify;
           justify-content: space-between;
   padding: 40px 40px 0px; }
+  .fabrics-result_np {
+    padding: 0px; }
   .fabrics-result-item {
     -webkit-box-flex: 0;
     -webkit-flex: 0 1 324px;
@@ -4521,3 +4525,116 @@ a {
         color: #3A3A3A; }
   .fabrics-result-btn-wrapper {
     padding: 0px 0px 50px; }
+
+.fabrics-active-banner {
+  margin-bottom: 25px; }
+  .fabrics-active-banner img {
+    width: 100%; }
+
+.fabrics-active-colors {
+  margin-bottom: 25px; }
+  .fabrics-active-colors-head {
+    font-family: Proxima Nova;
+    line-height: normal;
+    font-size: 24px;
+    color: #242424;
+    margin-bottom: 30px; }
+  .fabrics-active-colors-row {
+    display: -webkit-box;
+    display: -webkit-flex;
+    display: -ms-flexbox;
+    display: flex;
+    -webkit-flex-wrap: wrap;
+        -ms-flex-wrap: wrap;
+            flex-wrap: wrap;
+    -webkit-box-align: start;
+    -webkit-align-items: flex-start;
+        -ms-flex-align: start;
+            align-items: flex-start;
+    -webkit-box-pack: justify;
+    -webkit-justify-content: space-between;
+        -ms-flex-pack: justify;
+            justify-content: space-between; }
+    .fabrics-active-colors-row .tabs-container-list-item-innercontainer-side-material-list {
+      -webkit-flex-wrap: wrap;
+          -ms-flex-wrap: wrap;
+              flex-wrap: wrap; }
+    .fabrics-active-colors-row-item {
+      position: relative;
+      margin-right: 37px; }
+      @media screen and (max-width: 1366px) {
+        .fabrics-active-colors-row-item {
+          margin-right: 27px; } }
+      .fabrics-active-colors-row-item__img {
+        -webkit-border-radius: 50%;
+                border-radius: 50%;
+        width: 90px;
+        height: 90px;
+        position: relative; }
+        .fabrics-active-colors-row-item__img:after {
+          content: '';
+          position: absolute;
+          width: 0px;
+          height: 0px;
+          top: 45%;
+          left: 50%;
+          border-bottom: 2px solid #FFF;
+          border-left: 2px solid #FFF;
+          -webkit-transform: translate(-50%, -50%) rotate(-45deg);
+              -ms-transform: translate(-50%, -50%) rotate(-45deg);
+                  transform: translate(-50%, -50%) rotate(-45deg);
+          opacity: 0; }
+      .fabrics-active-colors-row-item:nth-child(1) {
+        margin-bottom: 30px; }
+      .fabrics-active-colors-row-item:nth-child(1n) .fabrics-active-colors-row-item__img {
+        background: #A75A2B; }
+      .fabrics-active-colors-row-item:nth-child(2n) .fabrics-active-colors-row-item__img {
+        background: #CBBA9F; }
+      .fabrics-active-colors-row-item:nth-child(3n) .fabrics-active-colors-row-item__img {
+        background: #191516; }
+      .fabrics-active-colors-row-item:nth-child(4n) .fabrics-active-colors-row-item__img {
+        background: #95873B; }
+      .fabrics-active-colors-row-item.active .fabrics-active-colors-row-item__img {
+        -webkit-border-radius: 50%;
+                border-radius: 50%;
+        position: relative; }
+        .fabrics-active-colors-row-item.active .fabrics-active-colors-row-item__img:after {
+          width: 25px;
+          height: 15px;
+          opacity: 1; }
+
+.fabrics-active-description {
+  margin-bottom: 25px; }
+  .fabrics-active-description-main {
+    font-family: 'Proxima Nova Light', sans-serif;
+    line-height: 37px;
+    font-size: 18px; }
+
+.fabrics-active-tech {
+  margin-bottom: 35px; }
+
+.fabrics-active-include {
+  margin-bottom: 40px; }
+  .fabrics-active-include .card-item-wrapper_fabrics {
+    width: 324px; }
+    @media screen and (max-width: 1366px) {
+      .fabrics-active-include .card-item-wrapper_fabrics {
+        width: 310px; }
+        .fabrics-active-include .card-item-wrapper_fabrics .card-item {
+          width: 310px; } }
+
+.fabrics-filter-letter.fabrics-active {
+  color: #D71921;
+  font-weight: 900;
+  font-family: 'Proxima Nova Semibold';
+  display: inline-block;
+  text-decoration: underline; }
+
+.fabrics-filter-column-row-value-row-item.fabrics-active .text-underline {
+  color: #D71921;
+  font-family: 'Proxima Nova';
+  display: inline-block; }
+
+.fabrics-filter-column-row-value-row-item_osob.fabrics-active {
+  color: #D71921;
+  font-family: 'Proxima Nova'; }
